# My_Fishing_Filter

./: README.md  main.py  pyproject.toml  requirements.txt
Data/phishing_email/email/: sample-3577.eml  sample-3578.eml  sample-3579.eml  sample-3580.eml  sample-3581.eml  sample-3582.eml  sample-3583.eml  sample-3584.eml  sample-3585.eml  sample-3586.eml  sample-3587.eml  sample-3588.eml  sample-3589.eml  sample-3590.eml  sample-3591.eml  sample-3592.eml  sample-3593.eml  sample-3594.eml  sample-3595.eml  sample-3596.eml  sample-3597.eml  sample-3598.eml  sample-3599.eml  sample-3600.eml  sample-3601.eml  sample-3602.eml  sample-3603.eml  sample-3604.eml  sample-3605.eml  sample-3607.eml  sample-3608.eml  sample-3609.eml  sample-3610.eml  sample-3611.eml  sample-3612.eml  sample-3613.eml  sample-3614.eml  sample-3615.eml  sample-3616.eml  sample-3617.eml  (+901 more)
Models/: logistic_regression_classifier.pkl  support_vector_classifier.pkl
notebooks/: preprocess.ipynb
scripts/: tokens_class.py
streamlit_app/: get_email.py  main.py
