[project]
name = "my-fishing-filter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "deep-translator>=1.11.4",
    "joblib>=1.5.2",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.11",
    "streamlit>=1.52.1",
]
